# dj-webinars

deliveroo/customer-portal/features/transportation/shipment-details/: ShipmentDetailsPage.vue  Timeline.vue  mockShipment.ts  shipment-details-api.ts
deliveroo/customer-portal/features/transportation/shipment-listing/: shipment.mocks.ts
webinar-02-mcp/: NOTES.md
webinar-02-mcp/mcp-playground/: docs-server.js  package.json
webinar-02-mcp/mcp-playground-py/: README.md  greeting_server.py  pyproject.toml
webinar-02-mcp/mcp-playground-py/greeting_mcp_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
webinar-02-mcp/mcp-playground/docs/: employees.md  projects.md
webinar-04-fullstack/deliveroo/: docker-compose.yml
webinar-04-fullstack/deliveroo/.cursor/rules/: angular-best-practices.mdc  architecure-best-practice.mdc  monorepo-dependency-management-rule.mdc
webinar-04-fullstack/deliveroo/deliveroo-backend/src/: employee.model.ts  queries.ts  server.ts
webinar-04-fullstack/deliveroo/deliveroo-frontend/: package-lock.json
webinar-04-fullstack/deliveroo/deliveroo-frontend/src/app/features/fleet/: fleet-mock.service.ts
webinar-04-fullstack/deliveroo/deliveroo-frontend/src/app/features/personnel/: add-personnel-modal.component.ts  personnel-http.service.ts  personnel.component.ts  personnel.model.ts
webinar-04-fullstack/deliveroo/deliveroo-frontend/src/app/features/personnel/components/: add-personnel-modal.component.ts
webinar-04-fullstack/deliveroo/postgres/: init.sql
